<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">URL Uploader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Default_Action">Default Action</string>
    <string name="rDownDir">Download and Open (Direct)</string>
    <string name="rDownMngOpen">Download and Open (Using Manager)</string>
    <string name="rDownMng">Download (Using Manager)</string>
    <string name="Download_Method">Download Method</string>
    <string name="aOpen">Open</string>
    <string name="aEdit">Edit</string>
    <string name="aSend">Send</string>
    <string name="Close">Close</string>
    
</resources>