<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Download_Method" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rDownMng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rDownMng" />

        <RadioButton
            android:id="@+id/rDownMngOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rDownMngOpen" />

        <RadioButton
            android:id="@+id/rDownDir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rDownDir" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:text="@string/Default_Action" />

    
    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/aSend"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aSend" />


        <RadioButton
            android:id="@+id/aEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aEdit" />
        
        
        <RadioButton
            android:id="@+id/aOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aOpen" />

    </RadioGroup>
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="close"
        android:text="@string/Close" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>